--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 0.0.0
+	maven_group = hibi
+	archives_base_name = capetweaks
 
 # Dependencies
 	fabric_version=0.36.0+1.17
