--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	maven { url "https://maven.terraformersmc.com/releases" }
+	// maven { url "https://maven.terraformersmc.com/releases" }
+	maven { url "https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/" }
 }
 
 dependencies {
