--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ group = project.maven_group
 repositories {
 	// maven { url "https://maven.terraformersmc.com/releases" }
 	maven { url "https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -26,6 +27,10 @@ dependencies {
 
 	// Modmenu
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+	// Cloth Config
+	modApi "me.shedaniel.cloth:cloth-config-lite-fabric:${project.cc_lite_version}"
+	include "me.shedaniel.cloth:cloth-config-lite-fabric:${project.cc_lite_version}"
 }
 
 processResources {
