--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,9 @@ dependencies {
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	// Cloth Config
-	modApi "me.shedaniel.cloth:cloth-config-lite-fabric:${project.cc_lite_version}"
-	include "me.shedaniel.cloth:cloth-config-lite-fabric:${project.cc_lite_version}"
+	modApi ("me.shedaniel.cloth:cloth-config-fabric:${project.cc_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
