--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	fabric_version=0.36.0+1.17
 	modmenu_version=2.0.2
-	cc_lite_version=2.0.+
+	cc_version=5.0.+
