--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -11,8 +11,7 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// maven { url "https://maven.terraformersmc.com/releases" }
-	maven { url "https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
 	maven { url "https://maven.shedaniel.me/" }
 }
 
@@ -22,14 +21,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	// modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Modmenu
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
-
-	// Cloth Config
-	modApi ("me.shedaniel.cloth:cloth-config-fabric:${project.cc_version}") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cc_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 }
@@ -43,12 +36,6 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
-	it.options.encoding = "UTF-8"
-
 	// Minecraft 1.17 (21w19a) upwards uses Java 16.
 	it.options.release = 16
 }
@@ -70,13 +57,7 @@ jar {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			from components.java
 		}
 	}
 
