--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
+	minecraft_version=1.18-pre1
+	yarn_mappings=1.18-pre1+build.8
+	loader_version=0.12.5
 
 # Mod Properties
 	mod_version = 0.3.0-alpha
@@ -13,6 +13,6 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = capetweaks
 
 # Dependencies
-	fabric_version=0.36.0+1.17
-	modmenu_version=2.0.2
-	cc_version=5.0.+
+	fabric_version=0.42.2+1.18
+	modmenu_version=3.0.0
+	cc_version=6.0.+
