--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18-pre1
-	yarn_mappings=1.18-pre1+build.8
+	minecraft_version=1.18-pre2
+	yarn_mappings=1.18-pre2+build.1
 	loader_version=0.12.5
 
 # Mod Properties
-	mod_version = 0.3.0-alpha
+	mod_version = 1.0.0
 	maven_group = hibi
 	archives_base_name = capetweaks
 
 # Dependencies
-	fabric_version=0.42.2+1.18
+	fabric_version=0.42.4+1.18
 	modmenu_version=3.0.0
 	cc_version=6.0.+
